fixed carousel alignment

--- a/project1/src/main/webapp/stylesheet/customstyles.css
+++ b/project1/src/main/webapp/stylesheet/customstyles.css
@@ -16,12 +16,9 @@ div {
 }
 
 .carousel-item > img {
-    /*position: relative;*/
-    /*!*top: 50%;*!*/
-    /*left: 10%;*/
-    /*right: 10%;*/
-    /*transform: translate(-50%, -50%);*/
-    /*min-width: 100%;*/
-    /*height: 40rem;*/
-    /*margin: 0 auto;*/
+    position: center;
+    transform: translate(10%);
+    min-width: fit-content;
+    min-height: fit-content;
+    margin: auto;
 }
